<resources>

    <string name="app_id_test">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_id">ca-app-pub-6323411719551102~4468929098</string>
    <string name="banner_id">ca-app-pub-6323411719551102/7521278479</string>

    <string name="app_name">Voice</string>
    <string name="prompt">Speech please</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="saved">Saved</string>
    <string name="text_size">Font size</string>
    <string name="store_days">How many days to keep log entries</string>
    <string name="vibro_at_loud_sounds">Vibration at loud sounds</string>
    <string name="vibro_after_pause">Vibration after a long pause</string>
    <string name="speech_rate">Speech rate</string>
    <string name="pitch">Timbre of speech</string>
    <string name="keywords">Keywords</string>
    <string name="select_keywords">Specify words upon detection of which there will be vibration</string>
    <string name="add_word">Add keyword</string>
    <string name="edit_word">Edit keyword</string>
    <string name="remove">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="fast_word_1">Hello</string>
    <string name="fast_word_2">Bye</string>
    <string name="fast_word_3">How are you?</string>
    <string name="fast_word_4">OK</string>
    <string name="fast_word_5">Thanks</string>
    <string name="warning_load_sound">ATTENTION!\nThere was a sharp loud sound</string>
    <string name="keyword_limit">Keyword limit reached</string>
    <string name="add_phrase">Add Phrase</string>
    <string name="edit_phrase">Edit phrase</string>
    <string name="phrase_1">Hello, i have hearing problems</string>
    <string name="phrase_2">With this application we will be able to communicate</string>
    <string name="phrase_3">Please speak loudly and clearly into the device</string>
    <string name="save_dialog">Save dialogue</string>
    <string name="saved_clipboard">Saved to clipboard</string>
    <string name="search">Search</string>
    <string name="search_phrases">Search by phrases</string>
    <string name="mute_assistant">To mute the assistant, you must add the device to the "Silent" or "Vibration" mode</string>
    <string name="guide_swipe">Swipe right to open phrases</string>
    <string name="guide_long_click">Long click to change the speaking language</string>
    <string name="guide_reverse">Click to flip the microphone to the interlocutor</string>
    <string name="guide_pause">Click to freeze the screen to finish reading</string>
    <string name="guide_text">Send to speak</string>
    <string name="guide_phone">Turn on the speakerphone and raise the media sound to chat a call using the app</string>
    <string name="next">Next</string>
    <string name="show_guide">Show guide</string>
    <string name="credits"> Developed by Ilya Bogdan\n
        Designed by Polina Emelyanova\n
        With the support of Jorge Gonzalez-Ushakov</string>
    <string name="male_voice">Male voice</string>
    <string name="female_voice">Female voice</string>
    <string name="stop">Stop</string>
    <string name="speech">Speech</string>
    <string name="notify_title">Click to run the application</string>
    <string name="dialog_phone_message">To turn on speakerphone and increase the Multimedia sound for communication on a call</string>
    <string name="turn_on">Turn on</string>
    <string name="toast_phone_sound">Speakerphone is on and multimedia sound is raised</string>
    <string name="channel_notify_open_app">Permanent notification</string>
    <string name="voice_gender_chose">Voice acting</string>
    <string name="enable_auto_rotate">Enable auto-rotate on your phone</string>
    <string name="store_days_1">1 day</string>
    <string name="store_days_3">3 days</string>
    <string name="store_days_7">1 week</string>
    <string name="store_days_30">1 month</string>
    <string name="store_days_always">always</string>
    <string name="speech_error">Our application only works whit Google services,
    please make sure you have Google Services and Google Assistant installed on your phone</string>
    <string name="me">ME:</string>
    <string name="talker">TALKER:</string>
    <string name="rotate">Turn the microphone to the interlocutor</string>
    <string name="delete_journal">Clear dialogue</string>
    <string name="deleted_journal">Dialogue cleared</string>
    <string name="click_to_confirm">Press again to confirm</string>
</resources>