<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv6_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:text="@string/store_days" />

            <SeekBar
                android:id="@+id/sb_store_days_settings"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="4"
                android:progress="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv1_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:text="@string/text_size" />

            <SeekBar
                android:id="@+id/sb_text_size_settings"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:max="2"
                android:progress="1"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv2_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:text="@string/vibro_at_loud_sounds" />

            <CheckBox
                android:id="@+id/cb_vibro_at_loud_sounds_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv3_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:text="@string/vibro_after_pause" />

            <CheckBox
                android:id="@+id/cb_vibro_after_pause_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv4_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:text="@string/pitch" />

            <SeekBar
                android:id="@+id/sb_pitch_settings"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:max="2"
                android:progress="1"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv5_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:text="@string/speech_rate" />

            <SeekBar
                android:id="@+id/sb_speech_rate_settings"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:max="2"
                android:progress="1"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv8_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:text="TextView" />

            <CheckBox
                android:id="@+id/cb_voicing_emoticons_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv7_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:text="@string/keywords" />

            <CheckBox
                android:id="@+id/cb_keywords_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_keywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_add_keyword_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>