<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuideFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_guide_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/guide_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="300dp"
                        android:text="@string/guide_phone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_guide_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/guide_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="100"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginBottom="50dp"
                            android:text="@string/guide_text"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_guide_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/guide_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="300dp"
                        android:text="@string/guide_swipe"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_guide_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/linearLayout6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            style="@style/guide_style"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="100"
                            android:orientation="horizontal"></LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <LinearLayout
                                style="@style/guide_style"
                                android:layout_width="15dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="horizontal"></LinearLayout>

                            <LinearLayout
                                android:layout_width="130dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="horizontal"></LinearLayout>

                            <LinearLayout
                                style="@style/guide_style"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="100"
                                android:orientation="horizontal"></LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/guide_style"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:orientation="horizontal"></LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginBottom="200dp"
                        android:text="@string/guide_long_click"
                        app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_guide_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/linearLayout7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            style="@style/guide_style"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="100"
                            android:orientation="horizontal"></LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <LinearLayout
                                style="@style/guide_style"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="100"
                                android:orientation="horizontal"></LinearLayout>

                            <LinearLayout
                                android:layout_width="40dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="horizontal"></LinearLayout>

                            <LinearLayout
                                style="@style/guide_style"
                                android:layout_width="80dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="horizontal"></LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            style="@style/guide_style"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:orientation="horizontal"></LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginBottom="100dp"
                        android:text="@string/guide_reverse"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_guide_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/linearLayout6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            style="@style/guide_style"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="100"
                            android:orientation="horizontal"></LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="75dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <LinearLayout
                                style="@style/guide_style"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="100"
                                android:orientation="horizontal"></LinearLayout>

                            <LinearLayout
                                android:layout_width="75dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="horizontal"></LinearLayout>

                            <LinearLayout
                                style="@style/guide_style"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="100"
                                android:orientation="horizontal"></LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            style="@style/guide_style"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:orientation="horizontal"></LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="400dp"
                        android:text="@string/mute_assistant"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginBottom="150dp"
                        android:text="@string/guide_pause"
                        app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="100dp"
            android:text="@string/next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>